retrieveNA31/objects/Core_IPS_Environment_Details__c.object
<CustomObject>
    <description>Environment Details questions and answers as entered by internal or external user, as saved on Case.</description>
    <fields>
        <fullName>Core_Answer__c</fullName>
        <label>Answer</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Core_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Environment Details Responses</relationshipLabel>
        <relationshipName>Environments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Core_Question__c</fullName>
        <label>Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Environment Details Responses</label>
    <nameField>
        <label>Environmental Details</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Environment Details Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>